django bugging all day long

--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -258,8 +258,8 @@
 
             {% if data2.needsShipping %}
 
-            <form class="needs-validation">
-                <div class="col-md-8 order-md-1">
+            <form class="needs-validation col-md-8 order-md-1">
+            
                     {% if not autenticado %}
 
                     <div class="row">
