--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -337,12 +337,12 @@
             </form>
             {% else %}
 
-            <form class="needs-validation">
-                <div class="col-md-6 mb-2">
+            <form class="needs-validation col-md-6 mb-2">
+                <div class="">
                 <button type="submit" class="btn btn-primary btn-lg btn-block" id="continuarPago"
                                 data-shipping="no">Continuar</button>
                     <div id="paypal-button-container"></div>
-                </div>
+                
             </form>
             {% endif %}
             {% endif %}
