--- a/ecommerce/store/templates/registration/login.html
+++ b/ecommerce/store/templates/registration/login.html
@@ -1,25 +1,72 @@
-{% extends "../store/main.html "%}
+{% extends "../store/main.html" %}
 {% load static %}
 
 {% block content %}
 
-{% if error %}
-<p>{{error}} hooola</p>
-{% endif %}
 
-{% if user %}
+{% comment %} {% if user %}
 <h1>Users signed up:</h1>{{user}}
-{% endif %}
-{% if costumer %}
+{% endif %} {% endcomment %}
+{% comment %} {% if costumer %}
 <h1>Costumer name</h1>{{costumer}}
 {% endif %}
 <br>
-<br>
+<br> {% endcomment %}
 
 <form method="POST">
-{% csrf_token %}
+
 <input type="email" name="username" placeholder="email"/>
 <input type="password" name="password" placeholder="password"/>
 <button type="submit">Sign in</button>
 </form>
+
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 min-vh-100 d-flex flex-column justify-content-center">
+            <div class="row">
+                <div class="col-lg-6 col-md-8 mx-auto">
+
+                    <div class="card rounded shadow shadow-sm">
+                        <div class="card-header">
+                            <h3 class="mb-0">Login</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form" role="form" autocomplete="off" id="formLogin" method="POST"> {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="uname1">Email</label>
+                                    <input type="email" class="form-control form-control-lg rounded-0" name="username" 
+                                    required="true">
+                                   
+                                </div>
+                                <div class="form-group">
+                                    <label>Password</label>
+                                    <input type="password" class="form-control form-control-lg rounded-0" name="password" required="true">
+                                   
+                                </div>
+                                <button type="submit" class="btn btn-success btn-lg float-right" id="btnLogin">Login</button>
+                            </form>
+                        </div>
+                     
+                    </div>
+                   
+
+                </div>
+
+
+            </div>
+     
+
+        </div>
+       
+    </div>
+
+    {% if error %}
+<p>{{error}}</p>
+{% endif %}
+
+
+</div>
+
 {% endblock content%}
